# lcmh-assessment

./: .gitignore  EXTRACTION.md  README.md  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
components/: ComparisonTable.tsx  DataCaveatsPanel.tsx  EpdExplorer.tsx  FilterBar.tsx  LegendBar.tsx  ProductCard.tsx  StageCell.tsx
data/: facets.json  products.json
lib/: data.ts  types.ts  utils.ts
llm-wiki/: AGENTS.md
llm-wiki/.obsidian/: graph.json
llm-wiki/raw/: EPD_HUB-5749_2026-06-27_en.json  EPD_HUB-5882_2026-06-27_en.json  EPD_HUB-5882_2026-06-27_en.md  EPD_HUB-5943_2026-06-27_en.json  EPD_HUB-5943_2026-06-27_en.md  EPD_HUB-5991_2026-06-27_en.json  EPD_HUB-5991_2026-06-27_en.md  epd-australasia-com-wp-content-uploads-2023-08-epd-ies-0009353-003-hallett-ready-mix-concrete-2026-05-04-pdf.md  epd-australasia-com-wp-content-uploads-2024-12-epd-ies-0014327-002-holcim-qld-seq-geostone-qx25mor-2026-04-02-pdf.json  epd-australasia-com-wp-content-uploads-2024-12-epd-ies-0014327-002-holcim-qld-seq-geostone-qx25mor-2026-04-02-pdf.md  epd-australasia-com-wp-content-uploads-2025-05-epd-ies-0029695-001-holcim-qld-brisbane-ecopact-qe252m100-2026-04-15-1-pdf.json  epd-australasia-com-wp-content-uploads-2025-05-epd-ies-0029695-001-holcim-qld-brisbane-ecopact-qe252m100-2026-04-15-1-pdf.md  epd-ies-0021165-sn252f100-llamaparse.md  epd-ies-0021165-sn252f100.json  epd-ies-0021165-sn252f100.md  epd-ies-0021754-001-acm-rockbank-ar2520.json  epd-ies-0021754-001-acm-rockbank-ar2520.md  (+2 more)
llm-wiki/wiki/: index.md  (+3 more)
prompt-templates/: extract.md
(+69 files in other folders)
