[project]
name = "lcmh-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi>=0.139.0",
    "opencv-python>=4.13.0.92",
    "python-multipart>=0.0.32",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "uvicorn>=0.49.0",
]
